fix spacing

--- a/frontend/src/Login/Login.css
+++ b/frontend/src/Login/Login.css
@@ -42,14 +42,14 @@
     background-repeat: no-repeat;
     background-size: cover;
   }
-  
+
   .login-box {
     height: 700px;
     width: 850px;
     max-width: 100%;
     padding: 20px;
     color: #000000;
-    margin: 6% auto; 
+    margin: 6% auto;
     background-image: url('MOTTAGNINGEN.png') ;
     background-repeat: no-repeat;
     background-size: contain;
@@ -58,15 +58,15 @@
   }
 
   .login-box h1 {
-    font-size: 30px;
+    font-size: 10px;
     text-align: center;
     margin-top: 60px;
     margin-left: -15%;
     margin-bottom: 2%;
     visibility: hidden;
   }
-  
-  
+
+
   .login-box label {
     font-size: 30px;
     text-align: left;
@@ -92,9 +92,9 @@
   }
 
   .login-box input[type=text]:focus, .login-box input[type=password]:focus {
-      outline-color: #ffffff; 
+      outline-color: #ffffff;
   }
-  
+
   .login-box input[type=text], .login-box input[type=password] {
       max-width: 80%;
     background-color: rgb(53, 53, 53);
@@ -104,19 +104,20 @@
     /*margin: 3% 0px;*/
     margin-left: 20%;
     margin-top: 1%;
+    margin-bottom: 2%;
     border-bottom: solid #ffffff 1px;
   }
-  
+
   .login-box input[type=submit] {
-    width: 30%;
+    width: 25%;
     padding: 1.4% 8%;
-    background-color: #214231;
+    background-color: #7d1f27;
     border: none;
     border: none;
     color: #ffffff;
     font-family: Arcade;
     font-size: 25px;
-    margin: 10% 10px 10px 30%;
+    margin: 10% 10px 11px 32%;
   }
 
   .login-box-form {
@@ -151,7 +152,7 @@
     }
 
   }
- 
+
   @media screen and (max-width: 400px) {
     .login-box {
       margin-top: 30px;
@@ -212,9 +213,9 @@
     .login-box input[type=text], .login-box input[type=password]{
       font-size: 15px;
     }
-    
+
       }
-      
+
     .login-fail {
         margin: 10px 10px 10px 30px;
         width: 200px;
@@ -242,18 +243,18 @@
           text-align: left;
           font-size: 25px;
             }
-    
+
         .login-box input[type=text], .login-box input[type=password]{
           font-size: 15px;
         }
-        
+
           }
-          
+
         .login-fail {
             margin: 10px 10px 10px 50px;
             width: 200px;
-            
-    
+
+
           }
       /*
   @media screen and (max-width: 375px) and (min-height: 811px){
@@ -264,8 +265,5 @@
       margin: 20px 10px 10px 15px;
     }
     }
-  
+
     */
-
-    
-
